--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Blob storage website CI
 
 on:
-    push:
-        branches: [ main ]
+  push:
+    branches: [main]
 
 jobs:
   build:
@@ -11,19 +11,19 @@ jobs:
     - uses: actions/checkout@v3
     - uses: azure/login@v1
       with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-         - name: Upload to blob storage
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - name: Upload to blob storage
       uses: azure/CLI@v1
       with:
         inlineScript: |
-            az storage blob upload-batch --account-name staticwebstorage2420 --auth-mode key -d '$web' -s .
+          az storage blob upload-batch --account-name staticwebstorage2420 --auth-mode key -d '$web' -s .
     - name: Purge CDN endpoint
       uses: azure/CLI@v1
       with:
-        inlineScript: 
-           az cdn endpoint purge --content-paths  "/*" --profile-name "staticWebProfile" --name "staticWebEP-efbcb4cvdzaccdhq.z01.azurefd.net" --resource-group "StaticWeb-RG"
+        inlineScript: |
+          az cdn endpoint purge --content-paths "/*" --profile-name "staticWebProfile" --name "staticWebEP-efbcb4cvdzaccdhq.z01.azurefd.net" --resource-group "StaticWeb-RG"
     # Azure logout
     - name: logout
       run: |
-            az logout
+        az logout
       if: always()
