--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       uses: azure/CLI@v1
       with:
         inlineScript: |
-          az cdn endpoint purge --content-paths "/*" --profile-name "staticWebProfile" --name "staticWebEP-efbcb4cvdzaccdhq.z01.azurefd.net" --resource-group "StaticWeb-RG"
+          az cdn endpoint purge --content-paths "/*" --profile-name staticWebProfile --name staticWebEP-efbcb4cvdzaccdhq.z01.azurefd.net --resource-group StaticWeb-RG
     # Azure logout
     - name: logout
       run: |
